--- a/Simulador.html
+++ b/Simulador.html
@@ -16,10 +16,12 @@
       </div>
 
       <label for="monto">Monto del préstamo ($3,000 - $20,000):</label>
-      <input type="number" id="monto" min="3000" max="20000" required>
+      <input type="number" id="monto" name="monto" min="3000" max="20000" required>
       <br>
       <label for="plazo">Plazo en meses:</label>
-      <select id="plazo" required>
+      <select id="plazo" name="plazo" required>
+
+        <option value="0">Seleccione una opcion</option>
         <option value="1">1 mes</option>
         <option value="2">2 meses</option>
         <option value="3">3 meses</option>
@@ -38,7 +40,12 @@
 <script type="text/javascript"
   src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
+<script type="text/javascript">
 
+emailjs.init('tKK8_8qDTy5VU3YPk')
+
+
+</script>
 
 
 
